--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,3 +1,6 @@
+/* Import the base styles from form.css */
+@import url('form.css');
+
 /* Blog page styles */
 .blog-page {
     flex-direction: column;
@@ -13,17 +16,19 @@ header {
 
 .back-button {
     text-decoration: none;
-    color: black;
+    color: var(--text-color);
     padding: 5px 10px;
-    border: 1px solid black;
+    border: 1px solid var(--text-color);
 }
 
 main {
     padding: 20px;
+    flex-grow: 1;
+    overflow-y: auto;
 }
 
 .blog-post {
-    border: 1px solid #ccc;
+    border: 1px solid var(--text-color);
     margin-bottom: 20px;
     padding: 15px;
 }
