--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,9 +1,16 @@
 /* Import the base styles from form.css */
-@import url('form.css');
+@import url('styles.css');
 
 /* Blog page styles */
 .blog-page {
     flex-direction: column;
+}
+
+.container {
+    display: flex;
+    width: calc(100% - 40px);
+    height: calc(100vh - 40px);
+    margin: 10px;
 }
 
 header {
@@ -11,20 +18,33 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    border-bottom: 2px solid black;
+    border-bottom: 8px double black; 
 }
 
+#header-items {
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.mode-toggle {
+    position: relative;
+    align-self: flex-end;
+    background: none;
+    font-size: 24px;
+    cursor: pointer;
+} 
+
 .back-button {
-    text-decoration: none;
+    position: right;
+    align-self: center;
+    font-family: Arial, sans-serif;
+    background-color: var(--bg-color);
     color: var(--text-color);
     padding: 5px 10px;
-    border: 1px solid var(--text-color);
 }
 
 main {
     padding: 20px;
-    flex-grow: 1;
-    overflow-y: auto;
 }
 
 .blog-post {
@@ -35,6 +55,12 @@ main {
 
 footer {
     text-align: center;
+    font-family: Arial, sans-serif;
     padding: 20px;
-    border-top: 2px solid black;
+    border-top: 8px double black;
+    width: 100%;
+}
+
+#footer-details {
+    text-align: left;
 }
