--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -32,14 +32,15 @@ header {
     background: none;
     font-size: 24px;
     cursor: pointer;
+    border: none;
 } 
 
 .back-button {
     position: right;
     align-self: center;
     font-family: Arial, sans-serif;
-    background-color: var(--bg-color);
-    color: var(--text-color);
+    background-color: var(--button-bg);
+    color: var(--button-text);
     padding: 5px 10px;
 }
 
@@ -48,7 +49,7 @@ main {
 }
 
 .blog-post {
-    border: 1px solid var(--text-color);
+    border: 2px solid var(--text-color);
     margin-bottom: 20px;
     padding: 15px;
 }
