--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,3 @@
-/* header {
-    display: flex;
-    justify-content: flex-end;
-    padding: 10px;
-    border-bottom: 8px double black;
-    width: 100%;
-} */
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -22,28 +14,28 @@ body {
     margin: 10px;
 }
 
-/* .mode-toggle {
-    position: relative;
-    align-self: flex-end;
-    background: none;
-    font-size: 24px;
-    cursor: pointer;
-}  */
-
 body.dark-mode {
+    --header-bg: black;
+    --header-text: white;
     --bg-color: #333;
     --text-color: white;
     --input-bg: #555;
     --input-text: white;
     --button-bg: #555;
     --button-text: white;
+    --footer-bg: black;
+    --footer-text: white;
 }
 
 :root {
+    --header-bg: white;
+    --header-text: black;
     --bg-color: white;
     --text-color: black;
     --input-bg: white;
     --input-text: black;
-    --button-bg: white;
-    --button-text: black;
+    --button-bg: #222222;
+    --button-text: white;
+    --footer-bg: #white;
+    --footer-text: black;
 }
